@@ -123,39 +123,6 @@
 	* Bumped version in branch to 1.6.1 in preparation of upcoming
 	  bugfix release.
 
-2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
-
-	*
-	* Released and tagged Tcllib 1.6.1 ========================
-	* 
-
-2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
-
-	* Bumped version in branch to 1.6.1 in preparation of upcoming
-	  bugfix release.
-
-2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
-
-	*
-	* Released and tagged Tcllib 1.6.1 ========================
-	* 
-
-2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
-
-	* Bumped version in branch to 1.6.1 in preparation of upcoming
-	  bugfix release.
-
-2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
-
-	*
-	* Released and tagged Tcllib 1.6.1 ========================
-	* 
-
-2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
-
-	* Bumped version in branch to 1.6.1 in preparation of upcoming
-	  bugfix release.
-
 2004-05-07  Andreas Kupries  <andreask@activestate.com>
 
 	* New module for querying JPEG images, and manipulating their
